// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Button danger > icon only 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <button
        class="h-8 items-center gap-2 rounded p-2 transition-colors cursor-pointer bg-red-600 text-white hover:bg-red-500 active:bg-red-800 inline-flex w-fit"
        data-testid="button"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-cog size-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="1.5"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M11 10.27 7 3.34"
          />
          <path
            d="m11 13.73-4 6.93"
          />
          <path
            d="M12 22v-2"
          />
          <path
            d="M12 2v2"
          />
          <path
            d="M14 12h8"
          />
          <path
            d="m17 20.66-1-1.73"
          />
          <path
            d="m17 3.34-1 1.73"
          />
          <path
            d="M2 12h2"
          />
          <path
            d="m20.66 17-1.73-1"
          />
          <path
            d="m20.66 7-1.73 1"
          />
          <path
            d="m3.34 17 1.73-1"
          />
          <path
            d="m3.34 7 1.73 1"
          />
          <circle
            cx="12"
            cy="12"
            r="2"
          />
          <circle
            cx="12"
            cy="12"
            r="8"
          />
        </svg>
      </button>
    </div>
  </body>,
  "container": <div>
    <button
      class="h-8 items-center gap-2 rounded p-2 transition-colors cursor-pointer bg-red-600 text-white hover:bg-red-500 active:bg-red-800 inline-flex w-fit"
      data-testid="button"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-cog size-5"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="1.5"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11 10.27 7 3.34"
        />
        <path
          d="m11 13.73-4 6.93"
        />
        <path
          d="M12 22v-2"
        />
        <path
          d="M12 2v2"
        />
        <path
          d="M14 12h8"
        />
        <path
          d="m17 20.66-1-1.73"
        />
        <path
          d="m17 3.34-1 1.73"
        />
        <path
          d="M2 12h2"
        />
        <path
          d="m20.66 17-1.73-1"
        />
        <path
          d="m20.66 7-1.73 1"
        />
        <path
          d="m3.34 17 1.73-1"
        />
        <path
          d="m3.34 7 1.73 1"
        />
        <circle
          cx="12"
          cy="12"
          r="2"
        />
        <circle
          cx="12"
          cy="12"
          r="8"
        />
      </svg>
    </button>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Button danger > with text 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <button
        class="h-8 items-center gap-2 rounded p-2 transition-colors cursor-pointer bg-red-600 text-white hover:bg-red-500 active:bg-red-800 inline-flex w-fit"
        data-testid="button"
        type="button"
      >
        text
      </button>
    </div>
  </body>,
  "container": <div>
    <button
      class="h-8 items-center gap-2 rounded p-2 transition-colors cursor-pointer bg-red-600 text-white hover:bg-red-500 active:bg-red-800 inline-flex w-fit"
      data-testid="button"
      type="button"
    >
      text
    </button>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Button danger > with text and icon 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <button
        class="h-8 items-center gap-2 rounded p-2 transition-colors cursor-pointer bg-red-600 text-white hover:bg-red-500 active:bg-red-800 inline-flex w-fit"
        data-testid="button"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-cog size-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="1.5"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M11 10.27 7 3.34"
          />
          <path
            d="m11 13.73-4 6.93"
          />
          <path
            d="M12 22v-2"
          />
          <path
            d="M12 2v2"
          />
          <path
            d="M14 12h8"
          />
          <path
            d="m17 20.66-1-1.73"
          />
          <path
            d="m17 3.34-1 1.73"
          />
          <path
            d="M2 12h2"
          />
          <path
            d="m20.66 17-1.73-1"
          />
          <path
            d="m20.66 7-1.73 1"
          />
          <path
            d="m3.34 17 1.73-1"
          />
          <path
            d="m3.34 7 1.73 1"
          />
          <circle
            cx="12"
            cy="12"
            r="2"
          />
          <circle
            cx="12"
            cy="12"
            r="8"
          />
        </svg>
        text
      </button>
    </div>
  </body>,
  "container": <div>
    <button
      class="h-8 items-center gap-2 rounded p-2 transition-colors cursor-pointer bg-red-600 text-white hover:bg-red-500 active:bg-red-800 inline-flex w-fit"
      data-testid="button"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-cog size-5"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="1.5"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11 10.27 7 3.34"
        />
        <path
          d="m11 13.73-4 6.93"
        />
        <path
          d="M12 22v-2"
        />
        <path
          d="M12 2v2"
        />
        <path
          d="M14 12h8"
        />
        <path
          d="m17 20.66-1-1.73"
        />
        <path
          d="m17 3.34-1 1.73"
        />
        <path
          d="M2 12h2"
        />
        <path
          d="m20.66 17-1.73-1"
        />
        <path
          d="m20.66 7-1.73 1"
        />
        <path
          d="m3.34 17 1.73-1"
        />
        <path
          d="m3.34 7 1.73 1"
        />
        <circle
          cx="12"
          cy="12"
          r="2"
        />
        <circle
          cx="12"
          cy="12"
          r="8"
        />
      </svg>
      text
    </button>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Button disabled > disabled 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <button
        class="h-8 items-center gap-2 rounded p-2 transition-colors pointer-events-none cursor-not-allowed opacity-40 hover:bg-gray-200/60 active:bg-gray-300 inline-flex w-fit"
        data-testid="button"
        disabled=""
        type="button"
      >
        test
      </button>
    </div>
  </body>,
  "container": <div>
    <button
      class="h-8 items-center gap-2 rounded p-2 transition-colors pointer-events-none cursor-not-allowed opacity-40 hover:bg-gray-200/60 active:bg-gray-300 inline-flex w-fit"
      data-testid="button"
      disabled=""
      type="button"
    >
      test
    </button>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Button menu > icon only 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <button
        class="h-8 items-center gap-2 rounded p-2 transition-colors cursor-pointer hover:bg-gray-300 active:bg-gray-400 inline-flex w-fit"
        data-testid="button"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-cog size-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="1.5"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M11 10.27 7 3.34"
          />
          <path
            d="m11 13.73-4 6.93"
          />
          <path
            d="M12 22v-2"
          />
          <path
            d="M12 2v2"
          />
          <path
            d="M14 12h8"
          />
          <path
            d="m17 20.66-1-1.73"
          />
          <path
            d="m17 3.34-1 1.73"
          />
          <path
            d="M2 12h2"
          />
          <path
            d="m20.66 17-1.73-1"
          />
          <path
            d="m20.66 7-1.73 1"
          />
          <path
            d="m3.34 17 1.73-1"
          />
          <path
            d="m3.34 7 1.73 1"
          />
          <circle
            cx="12"
            cy="12"
            r="2"
          />
          <circle
            cx="12"
            cy="12"
            r="8"
          />
        </svg>
      </button>
    </div>
  </body>,
  "container": <div>
    <button
      class="h-8 items-center gap-2 rounded p-2 transition-colors cursor-pointer hover:bg-gray-300 active:bg-gray-400 inline-flex w-fit"
      data-testid="button"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-cog size-5"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="1.5"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11 10.27 7 3.34"
        />
        <path
          d="m11 13.73-4 6.93"
        />
        <path
          d="M12 22v-2"
        />
        <path
          d="M12 2v2"
        />
        <path
          d="M14 12h8"
        />
        <path
          d="m17 20.66-1-1.73"
        />
        <path
          d="m17 3.34-1 1.73"
        />
        <path
          d="M2 12h2"
        />
        <path
          d="m20.66 17-1.73-1"
        />
        <path
          d="m20.66 7-1.73 1"
        />
        <path
          d="m3.34 17 1.73-1"
        />
        <path
          d="m3.34 7 1.73 1"
        />
        <circle
          cx="12"
          cy="12"
          r="2"
        />
        <circle
          cx="12"
          cy="12"
          r="8"
        />
      </svg>
    </button>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Button menu > with text 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <button
        class="h-8 items-center gap-2 rounded p-2 transition-colors cursor-pointer hover:bg-gray-300 active:bg-gray-400 inline-flex w-fit"
        data-testid="button"
        type="button"
      >
        text
      </button>
    </div>
  </body>,
  "container": <div>
    <button
      class="h-8 items-center gap-2 rounded p-2 transition-colors cursor-pointer hover:bg-gray-300 active:bg-gray-400 inline-flex w-fit"
      data-testid="button"
      type="button"
    >
      text
    </button>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Button menu > with text and icon 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <button
        class="h-8 items-center gap-2 rounded p-2 transition-colors cursor-pointer hover:bg-gray-300 active:bg-gray-400 inline-flex w-fit"
        data-testid="button"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-cog size-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="1.5"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M11 10.27 7 3.34"
          />
          <path
            d="m11 13.73-4 6.93"
          />
          <path
            d="M12 22v-2"
          />
          <path
            d="M12 2v2"
          />
          <path
            d="M14 12h8"
          />
          <path
            d="m17 20.66-1-1.73"
          />
          <path
            d="m17 3.34-1 1.73"
          />
          <path
            d="M2 12h2"
          />
          <path
            d="m20.66 17-1.73-1"
          />
          <path
            d="m20.66 7-1.73 1"
          />
          <path
            d="m3.34 17 1.73-1"
          />
          <path
            d="m3.34 7 1.73 1"
          />
          <circle
            cx="12"
            cy="12"
            r="2"
          />
          <circle
            cx="12"
            cy="12"
            r="8"
          />
        </svg>
        text
      </button>
    </div>
  </body>,
  "container": <div>
    <button
      class="h-8 items-center gap-2 rounded p-2 transition-colors cursor-pointer hover:bg-gray-300 active:bg-gray-400 inline-flex w-fit"
      data-testid="button"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-cog size-5"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="1.5"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11 10.27 7 3.34"
        />
        <path
          d="m11 13.73-4 6.93"
        />
        <path
          d="M12 22v-2"
        />
        <path
          d="M12 2v2"
        />
        <path
          d="M14 12h8"
        />
        <path
          d="m17 20.66-1-1.73"
        />
        <path
          d="m17 3.34-1 1.73"
        />
        <path
          d="M2 12h2"
        />
        <path
          d="m20.66 17-1.73-1"
        />
        <path
          d="m20.66 7-1.73 1"
        />
        <path
          d="m3.34 17 1.73-1"
        />
        <path
          d="m3.34 7 1.73 1"
        />
        <circle
          cx="12"
          cy="12"
          r="2"
        />
        <circle
          cx="12"
          cy="12"
          r="8"
        />
      </svg>
      text
    </button>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Button primary > icon only 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <button
        class="h-8 items-center gap-2 rounded p-2 transition-colors cursor-pointer bg-gray-800 text-white transition-color hover:bg-zinc-700 active:bg-gray-950 inline-flex w-fit"
        data-testid="button"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-cog size-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="1.5"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M11 10.27 7 3.34"
          />
          <path
            d="m11 13.73-4 6.93"
          />
          <path
            d="M12 22v-2"
          />
          <path
            d="M12 2v2"
          />
          <path
            d="M14 12h8"
          />
          <path
            d="m17 20.66-1-1.73"
          />
          <path
            d="m17 3.34-1 1.73"
          />
          <path
            d="M2 12h2"
          />
          <path
            d="m20.66 17-1.73-1"
          />
          <path
            d="m20.66 7-1.73 1"
          />
          <path
            d="m3.34 17 1.73-1"
          />
          <path
            d="m3.34 7 1.73 1"
          />
          <circle
            cx="12"
            cy="12"
            r="2"
          />
          <circle
            cx="12"
            cy="12"
            r="8"
          />
        </svg>
      </button>
    </div>
  </body>,
  "container": <div>
    <button
      class="h-8 items-center gap-2 rounded p-2 transition-colors cursor-pointer bg-gray-800 text-white transition-color hover:bg-zinc-700 active:bg-gray-950 inline-flex w-fit"
      data-testid="button"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-cog size-5"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="1.5"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11 10.27 7 3.34"
        />
        <path
          d="m11 13.73-4 6.93"
        />
        <path
          d="M12 22v-2"
        />
        <path
          d="M12 2v2"
        />
        <path
          d="M14 12h8"
        />
        <path
          d="m17 20.66-1-1.73"
        />
        <path
          d="m17 3.34-1 1.73"
        />
        <path
          d="M2 12h2"
        />
        <path
          d="m20.66 17-1.73-1"
        />
        <path
          d="m20.66 7-1.73 1"
        />
        <path
          d="m3.34 17 1.73-1"
        />
        <path
          d="m3.34 7 1.73 1"
        />
        <circle
          cx="12"
          cy="12"
          r="2"
        />
        <circle
          cx="12"
          cy="12"
          r="8"
        />
      </svg>
    </button>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Button primary > with text 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <button
        class="h-8 items-center gap-2 rounded p-2 transition-colors cursor-pointer bg-gray-800 text-white transition-color hover:bg-zinc-700 active:bg-gray-950 inline-flex w-fit"
        data-testid="button"
        type="button"
      >
        text
      </button>
    </div>
  </body>,
  "container": <div>
    <button
      class="h-8 items-center gap-2 rounded p-2 transition-colors cursor-pointer bg-gray-800 text-white transition-color hover:bg-zinc-700 active:bg-gray-950 inline-flex w-fit"
      data-testid="button"
      type="button"
    >
      text
    </button>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Button primary > with text and icon 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <button
        class="h-8 items-center gap-2 rounded p-2 transition-colors cursor-pointer bg-gray-800 text-white transition-color hover:bg-zinc-700 active:bg-gray-950 inline-flex w-fit"
        data-testid="button"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-cog size-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="1.5"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M11 10.27 7 3.34"
          />
          <path
            d="m11 13.73-4 6.93"
          />
          <path
            d="M12 22v-2"
          />
          <path
            d="M12 2v2"
          />
          <path
            d="M14 12h8"
          />
          <path
            d="m17 20.66-1-1.73"
          />
          <path
            d="m17 3.34-1 1.73"
          />
          <path
            d="M2 12h2"
          />
          <path
            d="m20.66 17-1.73-1"
          />
          <path
            d="m20.66 7-1.73 1"
          />
          <path
            d="m3.34 17 1.73-1"
          />
          <path
            d="m3.34 7 1.73 1"
          />
          <circle
            cx="12"
            cy="12"
            r="2"
          />
          <circle
            cx="12"
            cy="12"
            r="8"
          />
        </svg>
        text
      </button>
    </div>
  </body>,
  "container": <div>
    <button
      class="h-8 items-center gap-2 rounded p-2 transition-colors cursor-pointer bg-gray-800 text-white transition-color hover:bg-zinc-700 active:bg-gray-950 inline-flex w-fit"
      data-testid="button"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-cog size-5"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="1.5"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11 10.27 7 3.34"
        />
        <path
          d="m11 13.73-4 6.93"
        />
        <path
          d="M12 22v-2"
        />
        <path
          d="M12 2v2"
        />
        <path
          d="M14 12h8"
        />
        <path
          d="m17 20.66-1-1.73"
        />
        <path
          d="m17 3.34-1 1.73"
        />
        <path
          d="M2 12h2"
        />
        <path
          d="m20.66 17-1.73-1"
        />
        <path
          d="m20.66 7-1.73 1"
        />
        <path
          d="m3.34 17 1.73-1"
        />
        <path
          d="m3.34 7 1.73 1"
        />
        <circle
          cx="12"
          cy="12"
          r="2"
        />
        <circle
          cx="12"
          cy="12"
          r="8"
        />
      </svg>
      text
    </button>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Button secondary > icon only 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <button
        class="h-8 items-center gap-2 rounded p-2 transition-colors cursor-pointer hover:bg-gray-200/60 active:bg-gray-300 inline-flex w-fit"
        data-testid="button"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-cog size-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="1.5"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M11 10.27 7 3.34"
          />
          <path
            d="m11 13.73-4 6.93"
          />
          <path
            d="M12 22v-2"
          />
          <path
            d="M12 2v2"
          />
          <path
            d="M14 12h8"
          />
          <path
            d="m17 20.66-1-1.73"
          />
          <path
            d="m17 3.34-1 1.73"
          />
          <path
            d="M2 12h2"
          />
          <path
            d="m20.66 17-1.73-1"
          />
          <path
            d="m20.66 7-1.73 1"
          />
          <path
            d="m3.34 17 1.73-1"
          />
          <path
            d="m3.34 7 1.73 1"
          />
          <circle
            cx="12"
            cy="12"
            r="2"
          />
          <circle
            cx="12"
            cy="12"
            r="8"
          />
        </svg>
      </button>
    </div>
  </body>,
  "container": <div>
    <button
      class="h-8 items-center gap-2 rounded p-2 transition-colors cursor-pointer hover:bg-gray-200/60 active:bg-gray-300 inline-flex w-fit"
      data-testid="button"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-cog size-5"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="1.5"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11 10.27 7 3.34"
        />
        <path
          d="m11 13.73-4 6.93"
        />
        <path
          d="M12 22v-2"
        />
        <path
          d="M12 2v2"
        />
        <path
          d="M14 12h8"
        />
        <path
          d="m17 20.66-1-1.73"
        />
        <path
          d="m17 3.34-1 1.73"
        />
        <path
          d="M2 12h2"
        />
        <path
          d="m20.66 17-1.73-1"
        />
        <path
          d="m20.66 7-1.73 1"
        />
        <path
          d="m3.34 17 1.73-1"
        />
        <path
          d="m3.34 7 1.73 1"
        />
        <circle
          cx="12"
          cy="12"
          r="2"
        />
        <circle
          cx="12"
          cy="12"
          r="8"
        />
      </svg>
    </button>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Button secondary > with text 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <button
        class="h-8 items-center gap-2 rounded p-2 transition-colors cursor-pointer hover:bg-gray-200/60 active:bg-gray-300 inline-flex w-fit"
        data-testid="button"
        type="button"
      >
        text
      </button>
    </div>
  </body>,
  "container": <div>
    <button
      class="h-8 items-center gap-2 rounded p-2 transition-colors cursor-pointer hover:bg-gray-200/60 active:bg-gray-300 inline-flex w-fit"
      data-testid="button"
      type="button"
    >
      text
    </button>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Button secondary > with text and icon 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <button
        class="h-8 items-center gap-2 rounded p-2 transition-colors cursor-pointer hover:bg-gray-200/60 active:bg-gray-300 inline-flex w-fit"
        data-testid="button"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-cog size-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="1.5"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M11 10.27 7 3.34"
          />
          <path
            d="m11 13.73-4 6.93"
          />
          <path
            d="M12 22v-2"
          />
          <path
            d="M12 2v2"
          />
          <path
            d="M14 12h8"
          />
          <path
            d="m17 20.66-1-1.73"
          />
          <path
            d="m17 3.34-1 1.73"
          />
          <path
            d="M2 12h2"
          />
          <path
            d="m20.66 17-1.73-1"
          />
          <path
            d="m20.66 7-1.73 1"
          />
          <path
            d="m3.34 17 1.73-1"
          />
          <path
            d="m3.34 7 1.73 1"
          />
          <circle
            cx="12"
            cy="12"
            r="2"
          />
          <circle
            cx="12"
            cy="12"
            r="8"
          />
        </svg>
        text
      </button>
    </div>
  </body>,
  "container": <div>
    <button
      class="h-8 items-center gap-2 rounded p-2 transition-colors cursor-pointer hover:bg-gray-200/60 active:bg-gray-300 inline-flex w-fit"
      data-testid="button"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-cog size-5"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="1.5"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11 10.27 7 3.34"
        />
        <path
          d="m11 13.73-4 6.93"
        />
        <path
          d="M12 22v-2"
        />
        <path
          d="M12 2v2"
        />
        <path
          d="M14 12h8"
        />
        <path
          d="m17 20.66-1-1.73"
        />
        <path
          d="m17 3.34-1 1.73"
        />
        <path
          d="M2 12h2"
        />
        <path
          d="m20.66 17-1.73-1"
        />
        <path
          d="m20.66 7-1.73 1"
        />
        <path
          d="m3.34 17 1.73-1"
        />
        <path
          d="m3.34 7 1.73 1"
        />
        <circle
          cx="12"
          cy="12"
          r="2"
        />
        <circle
          cx="12"
          cy="12"
          r="8"
        />
      </svg>
      text
    </button>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
